fix collapsed blocks

--- a/docs/_sass/normalize.scss
+++ b/docs/_sass/normalize.scss
@@ -42,6 +42,9 @@ main,
 menu,
 nav,
 section,
+{
+  display: block;
+}
 
 /**
  * 1. Correct `inline-block` display not defined in IE 8/9.
